2006-05-11  Callum McKenzie  <callum@spooky-possum.org>

	* cscmi.c: Recognise end-of-game situations when auto-move
	animation is in progress. Change deprecated scm_protect_object to
	scm_gc_protect_object. Change the return value of delayed-call to
	#t to ensure the double-click logic thinks something has happened.

2006-05-09  Callum McKenzie  <callum@spooky-possum.org>

	* dialog.c: Patch from chpe to make sure the games list is sorted
	regardless of translations. See bug #340271.

2006-05-06  Callum McKenzie  <callum@spooky-possum.org>

	* menu.h: 
	* menu.c: Patch from chpe to display the help on the same screen
	as the application. Bug #340272.

2006-05-04  Callum McKenzie  <callum@spooky-possum.org>

	* rules/union_square.scm (autoplay-foundations): 
	* rules/saratoga.scm (autoplay-foundations): 
	* rules/jumbo.scm (autoplay-foundations): 
	* rules/gypsy.scm (autoplay-foundations): 
	* rules/athena.scm (autoplay-foundations): 
	* rules/agnes.scm (autoplay-foundations): 
	* rules/klondike.scm (autoplay-foundations): 
	* rules/freecell.scm (move-low-cards): Use delayed-call.

	* cscmi.c: Add a delayed-call function so scheme code can animate
	auto-moves by delaying parts of the recursion. See bug #338453.

2006-05-02  Callum McKenzie  <callum@spooky-possum.org>

	* rules/freecell.scm: Remove some unused option variables.

2006-04-29  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c (create_sol_board): Patch from Amnon Aaronsohn to disable
	double-buffering since we do our own. Bug #338699.

2006-04-21  Callum McKenzie  <callum@spooky-possum.org>

	* card.c:
	* card.h:
	* cscmi.c:
	* cscmi.h:
	* draw.c:
	* events.c:
	* menu.c:
	* menu.h:
	* press_data.c:
	* slot.c:
	* slot.h:
	* sol.c:
	* sol.h: Patch from Amnon Aaronsohn to cleanup many minor aspects 
	of the code. Minor fixes from myself. See bug #338386 for details 
	and commentary.

2006-04-14  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c: Replace the explicit theme gconf key with a symbolic