@@ -1,3 +1,14 @@
+2006-04-28  Amnon Aaronsohn  <bla@cs.huji.ac.il>
+
+	* cscmi.c:
+	* cscmi.h:
+	* events.c:
+	* press_data.c:
+	* slot.c:
+	* slot.h:
+	* sol.c: Another cleanup patch. See bug #338386 for details 
+	and commentary.
+
 2006-05-11  Callum McKenzie  <callum@spooky-possum.org>
 
 	* cscmi.c: Recognise end-of-game situations when auto-move
